--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    
+    <!-- Permiso de Internet -->
+    <uses-permission android:name="android.permission.INTERNET"/>
+    
     <application
         android:label="NeptuneSteam"
         android:name="${applicationName}"
