--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,9 @@ dependencies:
     sdk: flutter
   #shared_preferences: ^2.5.3
   carousel_slider: ^5.1.1
-
+  http: ^1.5.0
+  flutter_riverpod: ^3.0.3
+  get_it: ^8.2.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
