--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,14 +30,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  #shared_preferences: ^2.5.3
-  carousel_slider: ^5.1.1
   http: ^1.5.0
   flutter_riverpod: ^3.0.3
   get_it: ^8.2.0
   intl: ^0.20.2
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  go_router: ^17.0.0
+  fl_chart: ^1.1.1
+  image_picker: ^1.0.7
+  shared_preferences: ^2.5.3
   cupertino_icons: ^1.0.8
 
 dev_dependencies:
